# nottodbox

./: .gitignore  .pre-commit-config.yaml  AppImageBuilder.yml  CONTRIBUTING.md  MANIFEST.in  README.md  flatpak.yaml  io.github.mukonqi.nottodbox.yaml  meson.build  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/flatpak/: io.github.mukonqi.nottodbox.yaml
.github/recipes/: io.github.mukonqi.nottodbox.yaml  locale.py
.github/scripts/: appimage.yml  build-appimage.yml  changelog.py  consts.py  pyinstaller.sh  rename.py  screenshot.py  setup.py  translations.py
.github/workflows/: appimage.yml  build-appimage.yaml  build-appimage.yml  build-executable-via-pyinstaller.yaml  build.yaml  lint-and-fix.yaml  lint.yaml  ruff.yaml  set-up-release.yaml
app/: diaries.py  home.py  mainwindow.py  notes.py  sidebar.py  todos.py
data/: io.github.mukonqi.nottodbox.desktop.in.in  meson.build
data/color-schemes/: Nottodbox Dark.json  Nottodbox Light.json
doc/: COLOR_SCHEMES.md
docs/: NottodboxStyleColorSchemes.md
locale/: locale.qrc  tr_TR.ts
nottodbox/: __init__.py  __main__.py  about.py  application.py  area.py  centralwidget.py  consts.py  databases.py  diaries.py  home.py  mainwindow.py  meson.build  notes.py  nottodbox.in  selector.py  settings.py  sidebar.py  style.qss  todos.py
nottodbox/color-schemes/: nottodbox-dark.json  nottodbox-light.json
nottodbox/databases/: advanced.py  base.py  documents.py  lists.py
nottodbox/scripts/: about.py  application.py  area.py  centralwidget.py  consts.py  database.py  databases.py  home.py  mainwindow.py  receptor.py  selector.py  settings.py  sidebar.py  version.py
nottodbox/scripts/resources/: icons.py  locale.py
nottodbox/scripts/widgets/: controls.py  dialogs.py  documents.py  lists.py  settings.py
nottodbox/widgets/: controls.py  dialog.py  dialogs.py  documents.py  lists.py  options.py  other.py  others.py  pages.py  tabwidget.py  text_formatter.py
po/: POTFILES.in  merge.py  meson.build  tr.po  tr_TR.po
scripts/: translations.py
share/: meson.build
share/applications/: io.github.mukonqi.nottodbox.desktop  io.github.mukonqi.nottodbox.desktop.in  io.github.mukonqi.nottodbox.desktop.in.in
share/color-schemes/: Nottodbox Dark.json
share/icons/: icons.qrc
share/icons/hicolor/scalable/: icons.qrc
share/icons/pyinstaller/: io.github.mukonqi.nottodbox.icns
share/metainfo/: io.github.mukonqi.nottodbox.appdata.xml  io.github.mukonqi.nottodbox.appdata.xml.in  io.github.mukonqi.nottodbox.metainfo.xml.in
share/pyinstaller/: io.github.mukonqi.nottodbox.icns
