[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nottodbox"
version = "0.1.0"
authors = [{name="MuKonqi (Muhammed S."}]
description = "Organize notes, to-dos and diaries"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["PySide6"]

[project.scripts]
nottodbox = "nottodbox.scripts.application:main"

[tool.setuptools]
packages = ["nottodbox", "nottodbox.scripts", "nottodbox.scripts.resources", "nottodbox.scripts.widgets"]